--- a/.github/workflows/01-basic.yml
+++ b/.github/workflows/01-basic.yml
@@ -7,7 +7,7 @@ on:
   push:
   workflow_dispatch:
   schedule:
-    - cron: "5 19 20 5 *"
+    - cron: "*/5 * * * *" # runs every five minutes
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
