--- a/.github/workflows/01-basic.yml
+++ b/.github/workflows/01-basic.yml
@@ -4,9 +4,9 @@ name: Hello World
 
 # Controls when the workflow will run
 on:
-  push:
+  # push:
   workflow_dispatch:
-  schedule:
+  # schedule:
     # - cron: "*/5 * * * *" # runs every five minutes
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
