--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python Testing
+name: Python CI
 
 on:
   push:
@@ -35,7 +35,6 @@ jobs:
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version}}
-        cache: "pip"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
