--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -46,7 +46,7 @@ jobs:
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest tests.py --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     - name: Upload pytest test results
       uses: actions/upload-artifact@v4
       with:
