--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -9,7 +9,6 @@ on:
   pull_request:
     branches: [ "main" ]
     
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
 permissions:
@@ -21,7 +20,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest] # windows-latest]
         python-version: ["3.9", "3.11"]
         exclude:
           - os: macos-latest
