--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -20,7 +20,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest] # windows-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
         python-version: ["3.9", "3.11"]
         exclude:
           - os: macos-latest
@@ -38,7 +38,6 @@ jobs:
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install flake8 pytest pytest-cov ruff
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Lint with Ruff
       run: |
         ruff --output-format=github .
