--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -40,15 +40,15 @@ jobs:
         pip install flake8 pytest pytest-cov ruff
     - name: Lint with Ruff
       run: |
-        ruff --output-format=github .
+        ruff check --output-format=github .
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest --doctest-modules --junitxml=junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
+        pytest --doctest-modules --junitxml=tests/junit/test-results.xml --cov=com --cov-report=xml --cov-report=html
     - name: Upload pytest test results
       uses: actions/upload-artifact@v4
       with:
         name: pytest-results-${{ matrix.python-version }}
-        path: junit/test-results-${{ matrix.python-version }}.xml
+        path: tests/junit/test-results-${{ matrix.python-version }}.xml
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
