--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -49,6 +49,6 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: pytest-results-${{ matrix.python-version }}
-        path: tests/junit/test-results-${{ matrix.python-version }}.xml
+        path: ${{ github.workspace}}/tests/junit/test-results-${{ matrix.python-version }}.xml
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
