--- a/.github/workflows/02-python-test.yml
+++ b/.github/workflows/02-python-test.yml
@@ -44,11 +44,11 @@ jobs:
       continue-on-error: true
     - name: Test with pytest
       run: |
-        pytest --doctest-modules --junitxml=tests/junit/test-results-${{ matrix.python-version }}.xml --cov=com --cov-report=xml --cov-report=html
+        pytest --doctest-modules --junitxml=tests/junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml --cov=com --cov-report=xml --cov-report=html
     - name: Upload pytest test results
       uses: actions/upload-artifact@v4
       with:
         name: pytest-results-${{ matrix.python-version }}
-        path: ${{ github.workspace}}/tests/junit/test-results-${{ matrix.python-version }}.xml
+        path: ${{ github.workspace}}/tests/junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml
       # Use always() to always run this step to publish test results when there are test failures
       if: ${{ always() }}
