--- a/.github/workflows/02-python-ci.yml
+++ b/.github/workflows/02-python-ci.yml
@@ -30,21 +30,27 @@ jobs:
             
     steps:
     - uses: actions/checkout@v4
+    
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: ${{ matrix.python-version}}
+        cache: 'pip'
+        
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
         pip install flake8 pytest pytest-cov ruff
+        
     - name: Lint with Ruff
       run: |
         ruff check --output-format=github .
       continue-on-error: true
+      
     - name: Test with pytest
       run: |
         pytest --doctest-modules --junitxml=tests/junit/test-results-${{ matrix.os }}-${{ matrix.python-version }}.xml --cov=com --cov-report=xml --cov-report=html
+        
     - name: Upload pytest test results
       uses: actions/upload-artifact@v4
       with:
