--- a/.github/workflows/01-basic.yml
+++ b/.github/workflows/01-basic.yml
@@ -1,47 +1,30 @@
-# This is a basic workflow to help you get started with Actions
+name: 1. Hello World
 
-name: Hello World
-
-# Controls when the workflow will run
 on:
-  # push:
+  push:
   workflow_dispatch:
-  # schedule:
-    # - cron: "*/5 * * * *" # runs every five minutes
+  schedule:
+    - cron: "0 7 * * *" # runs every day at 07:00 UTC
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  Explore-GitHub-Actions:
-    # The type of runner that the job will run on
+  Hello-World-Checkout:
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      - uses: actions/checkout@v4
+      - name: Run a multi-line script
+        run: |
+          echo Hello, world!
+          less requirements.txt
+  
+  Explore-GitHub-Actions:
+    runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
       - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v4
+      - run: echo "🔎 The name of your branch is ${{ github.ref }}."
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
   
-  Hello-World-Checkout:
-    runs-on: ubuntu-latest
-
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
