Update 01-basic.yml to add better documentation

--- a/.github/workflows/01-basic.yml
+++ b/.github/workflows/01-basic.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Run a multi-line script
         run: |
           echo Hello, world!
+          echo These are the project requirements:
           less requirements.txt
   
   Explore-GitHub-Actions:
