--- a/.github/workflows/02-test.yml
+++ b/.github/workflows/02-test.yml
@@ -1,7 +1,4 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
-
-name: Python CI
+name: 2. Build and test with Python
 
 on:
   push:
@@ -9,11 +6,8 @@ on:
   pull_request:
     branches: [ "main" ]
     
-  workflow_dispatch:
-
 jobs:
-  test:
-
+  build-and-test:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -33,11 +27,11 @@ jobs:
       with:
         python-version: ${{ matrix.python-version}}
         cache: 'pip'
-        
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip install flake8 pytest pytest-cov ruff
+        pip -r requirements.txt
         
     - name: Lint with Ruff
       run: |
