--- a/.github/workflows/02-test.yml
+++ b/.github/workflows/02-test.yml
@@ -31,7 +31,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip setuptools wheel
-        pip -r requirements.txt
+        pip install -r requirements.txt
         
     - name: Lint with Ruff
       run: |
