--- a/.github/workflows/03-build-and-deploy.yml
+++ b/.github/workflows/03-build-and-deploy.yml
@@ -2,7 +2,7 @@ name: 3. Build and deploy Python app to Azure Web App
 
 on:
   workflow_run:
-    workflows: [02-test]
+    workflows: [2. Build and test with Python]
     branches: [main]
     types:
       - completed
