--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,105 @@
-streamlit
-flake8
-pytest 
-pytest-cov 
-ruff
+aiohttp==3.9.5
+aiosignal==1.3.1
+altair==5.3.0
+annotated-types==0.7.0
+anyio==4.3.0
+asttokens==2.4.1
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.3.3
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+comm==0.2.2
+coverage==7.5.1
+dataclasses-json==0.6.6
+debugpy==1.8.1
+decorator==5.1.1
+distro==1.9.0
+executing==2.0.1
+flake8==7.0.0
+frozenlist==1.4.1
+gitdb==4.0.11
+GitPython==3.1.43
+greenlet==3.0.3
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+iniconfig==2.0.0
+ipykernel==6.29.4
+ipython==8.24.0
+jedi==0.19.1
+Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==2.4
+jsonschema==4.22.0
+jsonschema-specifications==2023.12.1
+jupyter_client==8.6.1
+jupyter_core==5.7.2
+langchain==0.2.0
+langchain-community==0.2.0
+langchain-core==0.2.1
+langchain-text-splitters==0.2.0
+langsmith==0.1.60
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+marshmallow==3.21.2
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+multidict==6.0.5
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+numpy==1.26.4
+openai==1.30.1
+orjson==3.10.3
+packaging==23.2
+pandas==2.2.2
+parso==0.8.4
+pexpect==4.9.0
+pillow==10.3.0
+platformdirs==4.2.2
+pluggy==1.5.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==16.1.0
+pycodestyle==2.11.1
+pydantic==2.7.1
+pydantic_core==2.18.2
+pydeck==0.9.1
+pyflakes==3.2.0
+Pygments==2.18.0
+pytest==8.2.1
+pytest-cov==5.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.1
+PyYAML==6.0.1
+pyzmq==26.0.3
+referencing==0.35.1
+requests==2.32.1
+rich==13.7.1
+rpds-py==0.18.1
+ruff==0.4.4
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.1
+SQLAlchemy==2.0.30
+stack-data==0.6.3
+streamlit==1.34.0
+tenacity==8.3.0
+toml==0.10.2
+toolz==0.12.1
+tornado==6.4
+tqdm==4.66.4
+traitlets==5.14.3
+typing-inspect==0.9.0
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
+watchdog==4.0.0
+wcwidth==0.2.13
+yarl==1.9.4
