--- a/.github/workflows/01-basic.yml
+++ b/.github/workflows/01-basic.yml
@@ -2,6 +2,7 @@ name: 1. Hello World
 
 on:
   push:
+    branches: ["main"]
   workflow_dispatch:
   schedule:
     - cron: "0 7 * * *" # runs every day at 07:00 UTC
